# Group_B_Project_BE

./: .env_example  Dockerfile  README.md  index.py  pyproject.toml  requirements.txt
app/: __init__.py
app/connector/: sql_connector.py
app/controller/: admin_controller.py  donation_controller.py  donatur_controller.py  project_controller.py
app/models/: admin.py  donation.py  donatur.py  project.py
app/routes/: admin_route.py  donation_route.py  donatur_route.py  project_route.py
app/utils/: api_response.py
app/validations/: admin_validation.py  donation_validation.py  project_validation.py
assets/: donation_apps.sql
connectors/: db_connectors.py
